--- a/api.ipynb
+++ b/api.ipynb
@@ -115,6 +115,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>_dnp34</th>\n",
        "      <th>agebracket</th>\n",
        "      <th>backupnotes</th>\n",
        "      <th>contractedfromwhichpatientsuspected</th>\n",
@@ -124,7 +125,7 @@
        "      <th>detecteddistrict</th>\n",
        "      <th>detectedstate</th>\n",
        "      <th>estimatedonsetdate</th>\n",
-       "      <th>gender</th>\n",
+       "      <th>...</th>\n",
        "      <th>nationality</th>\n",
        "      <th>notes</th>\n",
        "      <th>patientnumber</th>\n",
@@ -140,6 +141,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Thrissur</td>\n",
        "      <td>20</td>\n",
        "      <td>Student from Wuhan</td>\n",
        "      <td></td>\n",
@@ -149,7 +151,7 @@
        "      <td>Thrissur</td>\n",
        "      <td>Kerala</td>\n",
        "      <td></td>\n",
-       "      <td>F</td>\n",
+       "      <td>...</td>\n",
        "      <td>India</td>\n",
        "      <td>Travelled from Wuhan</td>\n",
        "      <td>1</td>\n",
@@ -163,6 +165,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
        "      <td></td>\n",
        "      <td>Student from Wuhan</td>\n",
        "      <td></td>\n",
@@ -172,7 +175,7 @@
        "      <td>Alappuzha</td>\n",
        "      <td>Kerala</td>\n",
        "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>...</td>\n",
        "      <td>India</td>\n",
        "      <td>Travelled from Wuhan</td>\n",
        "      <td>2</td>\n",
@@ -186,6 +189,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
        "      <td></td>\n",
        "      <td>Student from Wuhan</td>\n",
        "      <td></td>\n",
@@ -195,7 +199,7 @@
        "      <td>Kasaragod</td>\n",
        "      <td>Kerala</td>\n",
        "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>...</td>\n",
        "      <td>India</td>\n",
        "      <td>Travelled from Wuhan</td>\n",
        "      <td>3</td>\n",
@@ -209,23 +213,29 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>3 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  agebracket         backupnotes contractedfromwhichpatientsuspected  \\\n",
-       "0         20  Student from Wuhan                                       \n",
-       "1             Student from Wuhan                                       \n",
-       "2             Student from Wuhan                                       \n",
+       "     _dnp34 agebracket         backupnotes  \\\n",
+       "0  Thrissur         20  Student from Wuhan   \n",
+       "1       NaN             Student from Wuhan   \n",
+       "2       NaN             Student from Wuhan   \n",
        "\n",
-       "  currentstatus dateannounced detectedcity detecteddistrict detectedstate  \\\n",
-       "0     Recovered    30/01/2020     Thrissur         Thrissur        Kerala   \n",
-       "1     Recovered    02/02/2020    Alappuzha        Alappuzha        Kerala   \n",
-       "2     Recovered    03/02/2020    Kasaragod        Kasaragod        Kerala   \n",
+       "  contractedfromwhichpatientsuspected currentstatus dateannounced  \\\n",
+       "0                                         Recovered    30/01/2020   \n",
+       "1                                         Recovered    02/02/2020   \n",
+       "2                                         Recovered    03/02/2020   \n",
        "\n",
-       "  estimatedonsetdate gender nationality                 notes patientnumber  \\\n",
-       "0                         F       India  Travelled from Wuhan             1   \n",
-       "1                                 India  Travelled from Wuhan             2   \n",
-       "2                                 India  Travelled from Wuhan             3   \n",
+       "  detectedcity detecteddistrict detectedstate estimatedonsetdate  ...  \\\n",
+       "0     Thrissur         Thrissur        Kerala                     ...   \n",
+       "1    Alappuzha        Alappuzha        Kerala                     ...   \n",
+       "2    Kasaragod        Kasaragod        Kerala                     ...   \n",
+       "\n",
+       "  nationality                 notes patientnumber  \\\n",
+       "0       India  Travelled from Wuhan             1   \n",
+       "1       India  Travelled from Wuhan             2   \n",
+       "2       India  Travelled from Wuhan             3   \n",
        "\n",
        "                                             source1  \\\n",
        "0  https://twitter.com/vijayanpinarayi/status/122...   \n",
@@ -245,7 +255,9 @@
        "  statepatientnumber statuschangedate typeoftransmission  \n",
        "0           KL-TS-P1       14/02/2020           Imported  \n",
        "1           KL-AL-P1       14/02/2020           Imported  \n",
-       "2           KL-KS-P1       14/02/2020           Imported  "
+       "2           KL-KS-P1       14/02/2020           Imported  \n",
+       "\n",
+       "[3 rows x 21 columns]"
       ]
      },
      "execution_count": 37,
@@ -268,7 +280,7 @@
     {
      "data": {
       "text/plain": [
-       "(27891, 20)"
+       "(27891, 21)"
       ]
      },
      "execution_count": 38,
@@ -289,11 +301,12 @@
     {
      "data": {
       "text/plain": [
-       "Index(['agebracket', 'backupnotes', 'contractedfromwhichpatientsuspected',\n",
-       "       'currentstatus', 'dateannounced', 'detectedcity', 'detecteddistrict',\n",
-       "       'detectedstate', 'estimatedonsetdate', 'gender', 'nationality', 'notes',\n",
-       "       'patientnumber', 'source1', 'source2', 'source3', 'statecode',\n",
-       "       'statepatientnumber', 'statuschangedate', 'typeoftransmission'],\n",
+       "Index(['_dnp34', 'agebracket', 'backupnotes',\n",
+       "       'contractedfromwhichpatientsuspected', 'currentstatus', 'dateannounced',\n",
+       "       'detectedcity', 'detecteddistrict', 'detectedstate',\n",
+       "       'estimatedonsetdate', 'gender', 'nationality', 'notes', 'patientnumber',\n",
+       "       'source1', 'source2', 'source3', 'statecode', 'statepatientnumber',\n",
+       "       'statuschangedate', 'typeoftransmission'],\n",
        "      dtype='object')"
       ]
      },
@@ -315,11 +328,12 @@
     {
      "data": {
       "text/plain": [
-       "Index(['agebracket', 'backupnotes', 'contractedfromwhichpatientsuspected',\n",
-       "       'currentstatus', 'dateannounced', 'detectedcity', 'detecteddistrict',\n",
-       "       'detectedstate', 'estimatedonsetdate', 'gender', 'nationality', 'notes',\n",
-       "       'patientnumber', 'source1', 'source2', 'source3', 'statecode',\n",
-       "       'statepatientnumber', 'statuschangedate', 'typeoftransmission', 'p_id'],\n",
+       "Index(['_dnp34', 'agebracket', 'backupnotes',\n",
+       "       'contractedfromwhichpatientsuspected', 'currentstatus', 'dateannounced',\n",
+       "       'detectedcity', 'detecteddistrict', 'detectedstate',\n",
+       "       'estimatedonsetdate', 'gender', 'nationality', 'notes', 'patientnumber',\n",
+       "       'source1', 'source2', 'source3', 'statecode', 'statepatientnumber',\n",
+       "       'statuschangedate', 'typeoftransmission', 'p_id'],\n",
        "      dtype='object')"
       ]
      },
@@ -591,7 +605,7 @@
       "age_bracket \t 25545\n",
       "gender \t 22578\n",
       "detected_city \t 25544\n",
-      "detected_district \t 7640\n",
+      "detected_district \t 7651\n",
       "detected_state \t 1\n",
       "state_code \t 1\n",
       "nationality \t 25184\n",
@@ -636,7 +650,7 @@
       "age_bracket \t 2346\n",
       "gender \t 5313\n",
       "detected_city \t 2347\n",
-      "detected_district \t 20251\n",
+      "detected_district \t 20240\n",
       "detected_state \t 27890\n",
       "state_code \t 27890\n",
       "nationality \t 2707\n",
@@ -685,7 +699,7 @@
        "age_bracket                                25545\n",
        "gender                                     22578\n",
        "detected_city                              25544\n",
-       "detected_district                           7640\n",
+       "detected_district                           7651\n",
        "detected_state                                 1\n",
        "state_code                                     1\n",
        "nationality                                25184\n",
@@ -740,7 +754,7 @@
        "age_bracket                                25544\n",
        "gender                                     22577\n",
        "detected_city                              25543\n",
-       "detected_district                           7639\n",
+       "detected_district                           7650\n",
        "detected_state                                 0\n",
        "state_code                                     0\n",
        "nationality                                25183\n",
