--- a/api.ipynb
+++ b/api.ipynb
@@ -568,7 +568,7 @@
     "# creating patient id column from patient number\n",
     "# ===============================================\n",
     "\n",
-    "# df['p_id'] = df['patientnumber'].apply(lambda x : 'P'+str(x))\n",
+    "df['p_id'] = df['patientnumber'].apply(lambda x : 'P'+str(x))\n",
     "df.columns"
    ]
   },
@@ -597,7 +597,7 @@
    ],
    "source": [
     "# order of columns\n",
-    "cols = ['patientnumber', 'statepatientnumber', \n",
+    "cols = ['patientnumber', 'p_id''statepatientnumber', \n",
     "        'dateannounced', 'agebracket', 'gender', \n",
     "        'detectedcity', 'detecteddistrict', 'detectedstate', 'statecode', 'nationality',\n",
     "        'typeoftransmission', 'contractedfromwhichpatientsuspected',\n",
