--- a/api.ipynb
+++ b/api.ipynb
@@ -239,7 +239,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(9051, 20)\n",
+      "(10038, 20)\n",
       "Index(['agebracket', 'contractedfromwhichpatientsuspected', 'currentstatus',\n",
       "       'dateannounced', 'detectedcity', 'detecteddistrict', 'detectedstate',\n",
       "       'entryid', 'gender', 'nationality', 'notes', 'numcases',\n",
@@ -332,7 +332,7 @@
     {
      "data": {
       "text/plain": [
-       "(36942, 20)"
+       "(37929, 20)"
       ]
      },
      "execution_count": 11,
@@ -587,7 +587,7 @@
     {
      "data": {
       "text/plain": [
-       "(36942, 21)"
+       "(37929, 21)"
       ]
      },
      "execution_count": 15,
@@ -818,28 +818,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(36942, 21) \n",
+      "(37929, 21) \n",
       "\n",
-      "patient_number \t 969\n",
+      "patient_number \t 0\n",
       "p_id \t 0\n",
-      "state_patient_number \t 29385\n",
-      "date_announced \t 0\n",
-      "age_bracket \t 30093\n",
-      "gender \t 27660\n",
-      "detected_city \t 34214\n",
-      "detected_district \t 7786\n",
-      "detected_state \t 62\n",
-      "state_code \t 62\n",
-      "nationality \t 34235\n",
-      "type_of_transmission \t 33952\n",
-      "contracted_from_which_patient_suspected \t 35098\n",
-      "status_change_date \t 9162\n",
-      "current_status \t 55\n",
+      "state_patient_number \t 29795\n",
+      "date_announced \t 1\n",
+      "age_bracket \t 30382\n",
+      "gender \t 27944\n",
+      "detected_city \t 35143\n",
+      "detected_district \t 7732\n",
+      "detected_state \t 8\n",
+      "state_code \t 8\n",
+      "nationality \t 35222\n",
+      "type_of_transmission \t 34939\n",
+      "contracted_from_which_patient_suspected \t 36050\n",
+      "status_change_date \t 10149\n",
+      "current_status \t 1\n",
       "estimated_onset_date \t 27891\n",
-      "source1 \t 490\n",
-      "source2 \t 32995\n",
-      "source3 \t 36462\n",
-      "notes \t 8553\n",
+      "source1 \t 438\n",
+      "source2 \t 33976\n",
+      "source3 \t 37446\n",
+      "notes \t 9451\n",
       "backup_notes \t 27530\n"
      ]
     }
@@ -863,29 +863,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(36942, 21) \n",
+      "(37929, 21) \n",
       "\n",
-      "patient_number \t 35973\n",
-      "p_id \t 36942\n",
-      "state_patient_number \t 7557\n",
-      "date_announced \t 36942\n",
-      "age_bracket \t 6849\n",
-      "gender \t 9282\n",
-      "detected_city \t 2728\n",
-      "detected_district \t 29156\n",
-      "detected_state \t 36880\n",
-      "state_code \t 36880\n",
+      "patient_number \t 37929\n",
+      "p_id \t 37929\n",
+      "state_patient_number \t 8134\n",
+      "date_announced \t 37928\n",
+      "age_bracket \t 7547\n",
+      "gender \t 9985\n",
+      "detected_city \t 2786\n",
+      "detected_district \t 30197\n",
+      "detected_state \t 37921\n",
+      "state_code \t 37921\n",
       "nationality \t 2707\n",
       "type_of_transmission \t 2990\n",
-      "contracted_from_which_patient_suspected \t 1844\n",
+      "contracted_from_which_patient_suspected \t 1879\n",
       "status_change_date \t 27780\n",
-      "current_status \t 36887\n",
-      "estimated_onset_date \t 9051\n",
-      "source1 \t 36452\n",
-      "source2 \t 3947\n",
-      "source3 \t 480\n",
-      "notes \t 28389\n",
-      "backup_notes \t 9412\n"
+      "current_status \t 37928\n",
+      "estimated_onset_date \t 10038\n",
+      "source1 \t 37491\n",
+      "source2 \t 3953\n",
+      "source3 \t 483\n",
+      "notes \t 28478\n",
+      "backup_notes \t 10399\n"
      ]
     }
    ],
@@ -908,33 +908,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(36942, 21)\n"
+      "(37929, 21)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "patient_number                               969\n",
+       "patient_number                                 0\n",
        "p_id                                           0\n",
-       "state_patient_number                       29385\n",
-       "date_announced                                 0\n",
-       "age_bracket                                30093\n",
-       "gender                                     27660\n",
-       "detected_city                              34214\n",
-       "detected_district                           7786\n",
-       "detected_state                                62\n",
-       "state_code                                    62\n",
-       "nationality                                34235\n",
-       "type_of_transmission                       33952\n",
-       "contracted_from_which_patient_suspected    35098\n",
-       "status_change_date                          9162\n",
-       "current_status                                55\n",
-       "estimated_onset_date                       36942\n",
-       "source1                                      490\n",
-       "source2                                    32995\n",
-       "source3                                    36462\n",
-       "notes                                       8553\n",
-       "backup_notes                               36581\n",
+       "state_patient_number                       29795\n",
+       "date_announced                                 1\n",
+       "age_bracket                                30382\n",
+       "gender                                     27944\n",
+       "detected_city                              35143\n",
+       "detected_district                           7732\n",
+       "detected_state                                 8\n",
+       "state_code                                     8\n",
+       "nationality                                35222\n",
+       "type_of_transmission                       34939\n",
+       "contracted_from_which_patient_suspected    36050\n",
+       "status_change_date                         10149\n",
+       "current_status                                 1\n",
+       "estimated_onset_date                       37929\n",
+       "source1                                      438\n",
+       "source2                                    33976\n",
+       "source3                                    37446\n",
+       "notes                                       9451\n",
+       "backup_notes                               37568\n",
        "dtype: int64"
       ]
      },
@@ -962,34 +962,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(36942, 21)\n",
-      "(36942, 21)\n"
+      "(37929, 21)\n",
+      "(37929, 21)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "patient_number                               969\n",
+       "patient_number                                 0\n",
        "p_id                                           0\n",
-       "state_patient_number                       29385\n",
-       "date_announced                                 0\n",
-       "age_bracket                                30093\n",
-       "gender                                     27660\n",
-       "detected_city                              34214\n",
-       "detected_district                           7786\n",
-       "detected_state                                62\n",
-       "state_code                                    62\n",
-       "nationality                                34235\n",
-       "type_of_transmission                       33952\n",
-       "contracted_from_which_patient_suspected    35098\n",
-       "status_change_date                          9162\n",
-       "current_status                                55\n",
-       "estimated_onset_date                       36942\n",
-       "source1                                      490\n",
-       "source2                                    32995\n",
-       "source3                                    36462\n",
-       "notes                                       8553\n",
-       "backup_notes                               36581\n",
+       "state_patient_number                       29795\n",
+       "date_announced                                 1\n",
+       "age_bracket                                30382\n",
+       "gender                                     27944\n",
+       "detected_city                              35143\n",
+       "detected_district                           7732\n",
+       "detected_state                                 8\n",
+       "state_code                                     8\n",
+       "nationality                                35222\n",
+       "type_of_transmission                       34939\n",
+       "contracted_from_which_patient_suspected    36050\n",
+       "status_change_date                         10149\n",
+       "current_status                                 1\n",
+       "estimated_onset_date                       37929\n",
+       "source1                                      438\n",
+       "source2                                    33976\n",
+       "source3                                    37446\n",
+       "notes                                       9451\n",
+       "backup_notes                               37568\n",
        "dtype: int64"
       ]
      },
@@ -1123,8 +1123,8 @@
        "      <th>totaltested</th>\n",
        "      <th>unconfirmed</th>\n",
        "      <th>updatedon</th>\n",
-       "      <th>_d415a</th>\n",
        "      <th>_d5fpr</th>\n",
+       "      <th>_d6ua4</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1231,7 +1231,7 @@
        "1                                          2679         246  24/04/2020   \n",
        "2                                          2848         106  27/04/2020   \n",
        "\n",
-       "  _d415a   _d5fpr  \n",
+       "  _d5fpr   _d6ua4  \n",
        "0    NaN      NaN  \n",
        "1   1000  1000000  \n",
        "2    NaN      NaN  \n",
@@ -1265,7 +1265,7 @@
        "       'source2', 'state', 'tags', 'testpositivityrate', 'testspermillion',\n",
        "       'testsperthousand', 'totalpeopleinquarantine',\n",
        "       'totalpeoplereleasedfromquarantine', 'totaltested', 'unconfirmed',\n",
-       "       'updatedon', '_d415a', '_d5fpr'],\n",
+       "       'updatedon', '_d5fpr', '_d6ua4'],\n",
        "      dtype='object')"
       ]
      },
@@ -1320,8 +1320,6 @@
        "      <th>numisolationbeds</th>\n",
        "      <th>numventilators</th>\n",
        "      <th>numcallsstatehelpline</th>\n",
-       "      <th>_d415a</th>\n",
-       "      <th>_d5fpr</th>\n",
        "      <th>source</th>\n",
        "      <th>source2</th>\n",
        "    </tr>\n",
@@ -1345,8 +1343,6 @@
        "      <td>50</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>https://t.me/indiacovid/2550</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
@@ -1368,8 +1364,6 @@
        "      <td>50</td>\n",
        "      <td></td>\n",
        "      <td>280</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1000000</td>\n",
        "      <td>https://t.me/indiacovid/3147?single</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
@@ -1391,8 +1385,6 @@
        "      <td>50</td>\n",
        "      <td></td>\n",
        "      <td>298</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>https://t.me/indiacovid/3365?single</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
@@ -1414,8 +1406,6 @@
        "      <td>50</td>\n",
        "      <td></td>\n",
        "      <td>340</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>https://t.me/indiacovid/3781</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
@@ -1437,8 +1427,6 @@
        "      <td>23479</td>\n",
        "      <td>330</td>\n",
        "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>https://twitter.com/ArogyaAndhra/status/124558...</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
@@ -1475,19 +1463,19 @@
        "3                                                       50                  \n",
        "4                     52221000       2680            23479            330   \n",
        "\n",
-       "  numcallsstatehelpline _d415a   _d5fpr  \\\n",
-       "0                          NaN      NaN   \n",
-       "1                   280   1000  1000000   \n",
-       "2                   298    NaN      NaN   \n",
-       "3                   340    NaN      NaN   \n",
-       "4                          NaN      NaN   \n",
+       "  numcallsstatehelpline                                             source  \\\n",
+       "0                                             https://t.me/indiacovid/2550   \n",
+       "1                   280                https://t.me/indiacovid/3147?single   \n",
+       "2                   298                https://t.me/indiacovid/3365?single   \n",
+       "3                   340                       https://t.me/indiacovid/3781   \n",
+       "4                        https://twitter.com/ArogyaAndhra/status/124558...   \n",
        "\n",
-       "                                              source source2  \n",
-       "0                       https://t.me/indiacovid/2550          \n",
-       "1                https://t.me/indiacovid/3147?single          \n",
-       "2                https://t.me/indiacovid/3365?single          \n",
-       "3                       https://t.me/indiacovid/3781          \n",
-       "4  https://twitter.com/ArogyaAndhra/status/124558...          "
+       "  source2  \n",
+       "0          \n",
+       "1          \n",
+       "2          \n",
+       "3          \n",
+       "4          "
       ]
      },
      "execution_count": 25,
@@ -1499,8 +1487,7 @@
     "cols = ['state', 'updatedon', 'totaltested', 'testspermillion', 'testsperthousand',\n",
     "        'positive', 'negative', 'unconfirmed', 'testpositivityrate',\n",
     "        'totalpeopleinquarantine', 'totalpeoplereleasedfromquarantine', 'populationsourcecovid19india',\n",
-    "        'numicubeds', 'numisolationbeds', 'numventilators', 'numcallsstatehelpline',\n",
-    "        '_d415a', '_d5fpr', 'source', 'source2']\n",
+    "        'numicubeds', 'numisolationbeds', 'numventilators', 'numcallsstatehelpline', 'source', 'source2']\n",
     "\n",
     "th = th[cols]\n",
     "\n",
